Addition of swagger to startup

--- a/APIGenerator/APIGenerator.csproj
+++ b/APIGenerator/APIGenerator.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.0.2"/>
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0-preview1-25305-02"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0"/>
   </ItemGroup>
 </Project>
