Some test settings added for handling swagger calls and also the setup settings for sql events as well

--- a/APIGenerator/appsettings.json
+++ b/APIGenerator/appsettings.json
@@ -1,8 +1,20 @@
 ﻿{
+  "ConnectionSettings":
+  {
+    "DefaultConnection" : ""
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  },
+  "DatabaseConnectionOptions":
+  {
+    "SQLAzure": false,
+    "JSON": true,
+    "Redis": false
   }
 }
