initial docker compose and dockerfile contents updated - Comments also added - Updated readme with link to site

--- a/APIGenerator/Dockerfile
+++ b/APIGenerator/Dockerfile
@@ -1,10 +1,17 @@
 
-FROM microsoft/aspnetcore-build
-# Create directory for the app source code
+# FROM microsoft/aspnetcore-build
+# # Create directory for the app source code
+# WORKDIR /app
+# # Copy the source and restore dependencies
+# COPY . /app
+# RUN ["dotnet", "restore"]
+# RUN ["dotnet", "build"]
+# EXPOSE 5000
+# ENTRYPOINT ["dotnet", "run"]
+
+FROM microsoft/aspnetcore:1.1.2
+ARG source
 WORKDIR /app
-# Copy the source and restore dependencies
-COPY . /app
-RUN ["dotnet", "restore"]
-RUN ["dotnet", "build"]
-EXPOSE 5000
-ENTRYPOINT ["dotnet", "run"]
+EXPOSE 80
+COPY ${source:-obj/Docker/publish} .
+ENTRYPOINT ["dotnet", "APIGenerator.dll"]
